efk-singlenode/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    service: elasticsearch
spec:
  ports:
    - port: 9200
      name: http
  selector:
    app: elasticsearch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
      version: v1
  template:
    metadata:
      labels:
        app: elasticsearch
        version: v1
    spec:
      containers:
        - name: elasticsearch
          image: alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
          securityContext:
            runAsUser: 1000
