efk-singlenode/elasticsearch-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: elasticsearch-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: elasticsearch
spec:
  hosts:
    - "*"
  gateways:
    - elasticsearch-gateway
  http:
    - match:
        - uri:
            prefix: /es/
        - uri:
            exact: /es
      rewrite:
        uri: /
      route:
        - destination:
            host: elasticsearch
            port:
              number: 9200
